--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <module>dubbo-test-instrument</module>
         <module>dubbo-test-plugin</module>
         <module>opentelemetry-plugin</module>
-        <module>profiler-configuration</module>
+        <module>opentelemetry-configuration</module>
         <module>profiler-instrument</module>
         <module>profiler-plugin</module>
         <module>one-java-agent</module>
