--- a/demo-plugin/src/main/plugin.properties
+++ b/demo-plugin/src/main/plugin.properties
@@ -4,3 +4,4 @@ version=1.0.0
 classpath=demo-plugin.jar:lib/
 pluginActivator=com.activator.test.DemoActivator
 importPackages=com.alibaba.fastjson,com.alibaba.bytekit
+logIsolation=true
