--- a/profiler-instrument/pom.xml
+++ b/profiler-instrument/pom.xml
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>com.alibaba.oneagent</groupId>
-            <artifactId>trace-configuration</artifactId>
+            <artifactId>opentelemetry-configuration</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
