--- a/bytekit-demo-plugin/pom.xml
+++ b/bytekit-demo-plugin/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.alibaba.oneagent</groupId>
         <artifactId>one-java-agent-parent</artifactId>
-        <version>0.0.2</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>bytekit-demo-plugin</artifactId>
