support inject config

--- a/demo-plugin/src/main/plugin.properties
+++ b/demo-plugin/src/main/plugin.properties
@@ -5,3 +5,5 @@ classpath=demo-plugin.jar:lib/
 pluginActivator=com.activator.test.DemoActivator
 importPackages=com.alibaba.fastjson,com.alibaba.bytekit
 logIsolation=true
+testConfig=testValue
+nest.nestConfig=nnn
