update grpc-plugin exports

--- a/grpc-plugin/src/main/plugin.properties
+++ b/grpc-plugin/src/main/plugin.properties
@@ -1,5 +1,6 @@
 specification=1
+order=950
 name=grpc-plugin
 version=1.0.0
 classpath=grpc-plugin.jar:lib/
-exportPackages=io.grpc
+exportPackages=io.grpc,io.netty,com.google.protobuf,google.protobuf
