--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>demo-agent</module>
         <module>one-java-agent-spy</module>
         <module>one-java-agent-plugin</module>
+        <module>one-agent-service</module>
         <module>demo-plugin</module>
         <module>grpc-plugin</module>
         <module>fastjson-demo-plugin</module>
@@ -52,6 +53,7 @@
         <module>dubbo-test-plugin</module>
         <module>opentelemetry-plugin</module>
         <module>opentelemetry-configuration</module>
+        <module>tunnel-plugin</module>
         <module>profiler-instrument</module>
         <module>profiler-plugin</module>
         <module>one-java-agent</module>
