grpc-plugin/profiler-plugin/tunnel-plugin support logIsolation

--- a/grpc-plugin/src/main/plugin.properties
+++ b/grpc-plugin/src/main/plugin.properties
@@ -2,5 +2,6 @@ specification=1
 order=950
 name=grpc-plugin
 version=1.0.0
+logIsolation=true
 classpath=grpc-plugin.jar:lib/
 exportPackages=io.grpc,io.netty,com.google.protobuf,google.protobuf
