--- a/profiler-plugin/src/main/plugin.properties
+++ b/profiler-plugin/src/main/plugin.properties
@@ -1,5 +1,6 @@
 specification=1
 name=profiler-plugin
 version=1.0.0
+logIsolation=true
 classpath=profiler-plugin.jar:lib/
 pluginActivator=com.alibaba.profiler.ProfilerActivator
