--- a/tunnel-plugin/src/main/plugin.properties
+++ b/tunnel-plugin/src/main/plugin.properties
@@ -1,6 +1,7 @@
 specification=1
 name=tunnel-plugin
 version=1.0.0
+logIsolation=true
 classpath=tunnel-plugin.jar:lib/
 importPackages=io.grpc,io.netty,com.google.protobuf,google.protobuf
 pluginActivator=io.oneagent.tunnel.TunnelPluginActivator
