--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <oneagent.deps.package>io.oneagent.deps</oneagent.deps.package>
         <bytekit.version>0.0.8-SNAPSHOT</bytekit.version>
-        <grpc.version>1.46.0</grpc.version>
+        <protoc.version>3.22.4</protoc.version>
+        <grpc.version>1.55.1</grpc.version>
         <opentelemetry.version>1.21.0-alpha</opentelemetry.version>
     </properties>
 
