--- a/one-agent-service/pom.xml
+++ b/one-agent-service/pom.xml
@@ -43,6 +43,19 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os> 
+                <family>mac</family>
+                </os>
+            </activation>
+            <properties>
+                <os.detected.classifier>osx-x86_64</os.detected.classifier>
+            </properties>
+        </profile>
+    </profiles>
     <build>
         <finalName>${project.artifactId}</finalName>
         <extensions>
@@ -59,9 +72,9 @@
                 <version>0.6.1</version>
                 <configuration>
                     <protoSourceRoot>${basedir}/src/main/proto</protoSourceRoot>
-                    <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}</protocArtifact>
+                    <protocArtifact>com.google.protobuf:protoc:3.11.0:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.28.0:exe:${os.detected.classifier}</pluginArtifact>
                 </configuration>
                 <executions>
                     <execution>
